further updates & fixes.